--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,14 +1,13 @@
 .header {
-    background-color: black;
-    width: 100vw;
+    background-color: rgb(0, 255, 85);
 }
 
 .linkTextPrimary {
-    color: rgb(203, 246, 79);
+    color: rgb(200, 255, 80);
 }
 
 .linkTextPrimary :hover {
-    color: rgb(203, 246, 79);
+    color: rgb(200, 255, 80);
 }
 
 .homeLink {
