--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,13 +1,14 @@
 .header {
     background-color: rgb(0, 0, 0) !important;
-    height: 75px;
+    height: 100px;
+    padding-top: 30px;
 }
 
 .linkTextPrimary {
     color: rgb(200, 255, 80);
 }
 
-.linkTextPrimary :hover {
+.linkTextPrimary:hover {
     color: rgb(200, 255, 80);
 }
 
